@@ -41,10 +41,10 @@
     <jacoco.min.linecoverage>0.25</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0.15</jacoco.min.branchcoverage>
     <javaModulesSurefireArgLine>
-      --add-opens com.azure.analytics.purview.sharing/com.azure.analytics.purview.sharing.models=com.fasterxml.jackson.databind
       --add-opens com.azure.analytics.purview.sharing/com.azure.analytics.purview.sharing.models=com.azure.core
     </javaModulesSurefireArgLine>
     <jacoco.skip>true</jacoco.skip> <!-- All tests are disabled -->
+    <spotless.skip>false</spotless.skip>
   </properties>
   <dependencies>
     <dependency>
